# allianceauth-wiki-js

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
tests/: test_settingsAA5.py
wikijs/: __init__.py  auth_hooks.py  manager.py  test.py
wikijs/locale/de/LC_MESSAGES/: django.mo
